2002-02-20  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-engine.c (class_init): add
	cmd_id & commands_id.
	(find_sync_for_node): we have no sync. for commands.

	* bonobo/bonobo-ui-sync-keys.c
	(impl_bonobo_ui_sync_keys_can_handle): accel.

	* bonobo/bonobo-ui-sync-menu.c
	(impl_bonobo_ui_sync_menu_can_handle): expand
	scope to accelerate.

	* bonobo/bonobo-ui-sync-toolbar.c
	(impl_bonobo_ui_sync_toolbar_can_handle): ditto.

2002-02-19  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-sync-menu.c
	(impl_bonobo_ui_sync_menu_can_handle): optimize.

	* bonobo/bonobo-ui-sync-toolbar.c
	(impl_bonobo_ui_sync_toolbar_can_handle): ditto.

	* bonobo/bonobo-ui-util.c
	(lookup_stock_compat): improve the mapping

2002-02-19  James Willcox  <jwillcox@cs.indiana.edu>

	* bonobo/bonobo-file-selector-util.c (run_file_selector):
	Fixed the behavior of bonobo_file_selector_open returning a local
	path instead of a text uri when using the GTK file selector.

2002-02-19  Michael Meeks  <michael@ximian.com>

	* Version 1.112.0

2002-02-18  Gediminas Paulauskas <menesis@delfi.lt>

	* configure.in: remove GNOME_COMMON_INIT, GNOME_PLATFORM_GNOME_2
	macros to match latest gnome-common.

2002-02-17  Zbigniew Chyla  <cyba@gnome.pl>

	* bonobo/bonobo-zoomable.c (bonobo_zoomable_class_init):
	Fixed typo in translatable string.

	* configure.in (ALL_LINGUAS): Added pl (Polish).

2002-02-15  Michael Meeks  <michael@ximian.com>

	* bonobo/Makefile.am: add deprecated flags.

	* tests/test-moniker.c (display_as_control): fix
	ref. leak.

2002-02-14  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-control-frame.c
	(bonobo_control_frame_get_popup_component): implement.

	* bonobo/bonobo-ui-engine-config.c
	(bonobo_ui_engine_config_serialize),
	(bonobo_ui_engine_config_hydrate): port to gconf.

2002-02-13  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-engine-config.c
	(response_fn, dialog_new): upd.

	* bonobo/bonobo-ui-config-widget.c