@@ -22,7 +22,7 @@
 #undef DEBUG_CONTROL
 
 /* To dump lots of sequence information */
-#undef DEBUG_UI
+#define noDEBUG_UI
 
 int        bonobo_ui_preferences_shutdown (void);
 void       bonobo_ui_image_set_pixbuf     (GtkImage       *image,
